force-app/main/default/objects/LoanBank__c/LoanBank__c.object-meta.xml
<CustomObject>
    <label>Loan+Bank</label>
    <nameField>
        <displayFormat>LNBT-{000000}</displayFormat>
        <label>LOAN+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>