force-app/main/default/objects/LoanBank__c/fields/BankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>BankTransactionCode__c</fullName>
    <formula>BankID__r.BankTransactionCode__c</formula>
    <label>BANK TRANSACTION CODE</label>
    <type>Text</type>
</CustomField>