force-app/main/default/objects/LoanBank__c/fields/LoanAmountFCYBank__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountFCYBank__c</fullName>
    <label>LOAN AMOUNT(FCY) FOR BANK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>