force-app/main/default/objects/LoanBank__c/fields/LoanAmountFCYFormu__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountFCYFormu__c</fullName>
    <formula>LoanID__r.LoanAmountFCY__c</formula>
    <label>LOAN AMOUNT(FCY)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>