force-app/main/default/objects/LoanBank__c/fields/LoanAmountLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountLocalFormu__c</fullName>
    <formula>LoanID__r.LoanAmount__c</formula>
    <label>LOAN AMOUNT(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>